# high-tide

./: .gitignore  CONTRIBUTING.md  README.md  blueprint-compiler.json  flake.nix  high-tide.doap  io.github.nokse22.HighTide.json  io.github.nokse22.high-tide.json  meson.build  python3-tidalapi.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: flatpak.yml  spellcheck.yml
build-aux/: alsa-utils.json  blueprint-compiler.json  gstreamer.json  io.github.nokse22.HighTide.json  io.github.nokse22.high-tide.json  libasound.json  libportal.json  python3-discord-rpc.json  python3-pypresence.json  python3-six.json  python3-tidalapi.json  requests.json
build-aux/gstreamer-1.0/: gstreamer.json
build-aux/lib/: libdv.json  libmicrodns.json  libpeas.json  python-modules.json
data/: HighTide.gresource.xml  high-tide.gresource.xml  io.github.nokse22.HighTide.appdata.xml.in  io.github.nokse22.HighTide.desktop.in  io.github.nokse22.HighTide.gschema.xml  io.github.nokse22.high-tide.appdata.xml.in  io.github.nokse22.high-tide.desktop.in  io.github.nokse22.high-tide.gschema.xml  meson.build  shortcuts-dialog.blp  style.css
data/gtk/: help-overlay.blp
data/icons/: meson.build
data/ui/: ai_radio_dialog.blp  card_template.blp  card_template.ui  detailed_track_listing.blp  detailed_track_listing.ui  login.blp  login.ui  new_playlist.blp  new_playlist.ui  preferences.blp  preferences.ui  search_entry.blp  search_entry.ui  search_filter.blp  search_filter.ui  window.blp  window.ui
data/ui/pages_ui/: artist_page_template.blp  artist_page_template.ui  page_template.blp  page_template.ui  search_page_template.blp  search_page_template.ui  tracks_list_template.blp  tracks_list_template.ui
data/ui/widgets/: auto_load_widget.blp  card_widget.blp  card_widget.ui  carousel_widget.blp  carousel_widget.ui  generic_track_widget.blp  generic_track_widget.ui  lyrics_widget.blp  queue_widget.blp  queue_widget.ui  shortcut_widget.blp  shortcuts_widget.blp  top_hit_widget.blp  top_hit_widget.ui  tracks_list_widget.blp  tracks_list_widget.ui
po/: LINGUAS  POTFILES  de.po  de_CH.po  es.po  fr.po  high-tide.pot  it.po  meson.build  nl.po  pl.po  pt_BR.po  tidal.pot  zh_TW.po
src/: HighTide.gresource.xml  __init__.py  disconnectable_iface.py  high-tide.gresource.xml  high-tide.in  login.py  main.py  meson.build  mpris.py  new_playlist.py  new_playlist.ui  preferences.ui  window.py  window.ui
src/lib/: __init__.py  ai_agent.py  ai_providers.py  cache.py  discord_rpc.py  player_object.py  secret_storage.py  utils.py  variables.py
src/pages/: __init__.py  ai_radio_page.py  album_page.py  artist_page.py  collection_page.py  explore_page.py  from_function_page.py  generic_page.py  home_page.py  mix_page.py  not_logged_in_page.py  page.py  playlist_page.py  search_page.py  single_type_page.py  start_up_page.py  track_list_page.py  track_radio_page.py
src/ui/: card_template.ui  search_filter.ui
src/ui/pages_ui/: artist_page_template.ui  home_page_template.ui  mix_page.ui  page_template.ui  tracks_list_template.ui
src/ui/widgets/: card_widget.ui  generic_track_widget.ui  tracks_list_widget.ui
src/widgets/: __init__.py  ai_radio_dialog.py  artist_label_widget.py  auto_load_widget.py  card_widget.py  carousel_widget.py  generic_track_widget.py  link_label_widget.py  lyrics_widget.py  queue_widget.py  shortcuts_widget.py  top_hit_widget.py  tracks_list_widget.py
subprojects/: blueprint-compiler.wrap
